--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^9.0.7",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
