feat: task dto validation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^9.0.7",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
